--- a/Assets/Editor/UIBuilder/ItemEditor.uxml
+++ b/Assets/Editor/UIBuilder/ItemEditor.uxml
@@ -3,14 +3,14 @@
         <ui:VisualElement name="ItemList" style="width: 30%; height: 100%; border-right-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); padding-right: 3px;">
             <ui:VisualElement name="Header" style="flex-direction: row; justify-content: space-between; padding-top: 2px; padding-bottom: 2px; align-items: center;">
                 <ui:Label text="ItemList" display-tooltip-when-elided="true" style="font-size: 20px; -unity-font-style: bold; margin-left: 5px; -unity-text-align: middle-left;" />
-                <ui:Button text="+" display-tooltip-when-elided="true" style="margin-right: 3px;" />
+                <ui:Button text="+" display-tooltip-when-elided="true" name="AddButton" style="margin-right: 3px;" />
             </ui:VisualElement>
-            <ui:ListView focusable="true" name="ListView" reorderable="true" show-border="true" style="flex-grow: 1;" />
+            <ui:ListView focusable="true" name="ListView" reorderable="true" show-border="true" show-alternating-row-backgrounds="ContentOnly" style="flex-grow: 1;" />
         </ui:VisualElement>
         <ui:ScrollView name="ItemDetails" style="width: 70%; height: 100%;">
             <ui:VisualElement name="Header" style="flex-direction: row; justify-content: space-between; padding-top: 2px; padding-bottom: 2px; padding-right: 3px; padding-left: 3px; align-items: center;">
                 <ui:Label text="Details Information" display-tooltip-when-elided="true" style="font-size: 20px; -unity-font-style: bold; margin-left: 3px; -unity-text-align: middle-left;" />
-                <ui:Button text="Delete" display-tooltip-when-elided="true" />
+                <ui:Button text="Delete" display-tooltip-when-elided="true" name="DeleteButton" />
             </ui:VisualElement>
             <ui:VisualElement name="Content" style="flex-grow: 1; padding-left: 3px; padding-right: 3px; padding-top: 3px; padding-bottom: 3px;">
                 <ui:VisualElement name="Row1" style="flex-direction: column; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); margin-left: 3px; margin-right: 3px; flex-grow: 1; margin-bottom: 5px;">
@@ -19,7 +19,7 @@
                         <ui:VisualElement name="Icon" style="background-image: url(&apos;project://database/Assets/M%20Studio/Art/Items/Icons/icon_M.png?fileID=21300000&amp;guid=ef065fb65f97e43f8b673d7718f87178&amp;type=3#icon_M&apos;); width: 80px; height: 80px; margin-left: 5px; margin-right: 5px;" />
                         <ui:VisualElement name="Details" style="flex-grow: 1; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); margin-right: 3px; margin-top: 3px; margin-bottom: 3px;">
                             <uie:IntegerField label="ID" value="0" name="ItemID" style="margin-top: 5px; margin-bottom: 5px;" />
-                            <ui:TextField picking-mode="Ignore" label="Name" text="filler text" name="ItemName" style="margin-top: 5px; margin-bottom: 5px;" />
+                            <ui:TextField picking-mode="Ignore" label="Name" name="ItemName" style="margin-top: 5px; margin-bottom: 5px;" />
                             <uie:EnumField label="Type" value="Center" name="ItemType" style="margin-top: 5px; margin-bottom: 5px;" />
                             <uie:ObjectField label="Icon" name="ItemIcon" type="UnityEngine.Sprite, UnityEngine.CoreModule" style="margin-top: 5px; margin-bottom: 5px;" />
                             <uie:ObjectField label="OnWorld Sprite" name="ItemOnWorldSprite" type="UnityEngine.Sprite, UnityEngine.CoreModule" style="margin-top: 5px; margin-bottom: 5px;" />
